home/mealie/3-mealie-deployment.yaml
# 3-mealie-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie-app
  labels:
    app: mealie
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mealie
  template:
    metadata:
      labels:
        app: mealie
    spec:
      containers:
        - name: mealie
          image: ghcr.io/mealie-recipes/mealie:v3.1.1
          volumeMounts:
            - name: data
              mountPath: /app/data
          resources:
            limits:
              memory: "1Gi"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mealie-config-pvc
