home/mealie/4-mealie-deployment.yaml
# 3-mealie-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie-app
  namespace: home
  labels:
    app: mealie
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mealie
  template:
    metadata:
      labels:
        app: mealie
    spec:
      #      initContainers:
      #        - name: volume-permissions
      #          image: busybox:1.37
      #          command: [ "sh", "-c", "chown 911:911 /app/data" ]
      #          volumeMounts:
      #            - name: data
      #              mountPath: /app/data
      #      securityContext:
      #        runAsUser: 100
      #        runAsGroup: 100
      containers:
        - name: mealie
          image: ghcr.io/mealie-recipes/mealie:v2.8.0
          volumeMounts:
            - name: data
              mountPath: /app/data
          resources:
            limits:
              memory: "1Gi"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mealie-config-pvc
