home/mealie/5-mealie-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie-service
  namespace: home
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  selector:
    app: mealie
  ports:
  - name: web-ui
    port: 9000
