home/mealie/6-mealie-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mealie-route
  namespace: home
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - "recipes.kerrlab.app"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    # Use backendRefs for Gateway API v1beta1
    - name: mealie-service
      port: 9000
